# oifitslib

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README  README.md  alloc_fits.c  bigtest2.fits  chkmalloc.c  chkmalloc.h  datemjd.c  datemjd.h  demo.c  exchange.doxygen  exchange.h  free_fits.c  oicheck.c  oicheck.h  oicheck.i  oifile.c  oifile.h  oifilter.c  oifilter.h  oifilter.i  oifits-check.c  oifits-filter.c  oifits-merge.c  oifits-upgrade.c  oifits.i  oifits_typemaps.i  oiiter.c  oiiter.h  oimerge.c  oimerge.h  oimerge.i  read_fits.c  testdata.fits  testdata.txt  (+12 more)
.github/workflows/: cmake.yml
CVSROOT/data_analysis/oifitslib/: Makefile  README  demo.c  exchange.doxygen  exchange.h  free_fits.c  oicheck.c  oicheck.h  oicheck.i  oifile.c  oifile.h  oifilter.c  oifilter.h  oifilter.i  oifits-check.c  oifits-filter.c  oifits.i  oifits_typemaps.i  oimerge.c  oimerge.i  read_fits.c  write_fits.c
cmake/: FindCFITSIO.cmake  FindPythonLibrary.cmake
doc/: CMakeLists.txt  Doxyfile.in  exchange.doxygen
src/: uncrustify.cfg
src/oifitslib/: CMakeLists.txt  alloc_fits.c  chkmalloc.c  chkmalloc.h  datemjd.c  datemjd.h  exchange.h  free_fits.c  mainpage.dox  oicheck.c  oicheck.h  oifile.c  oifile.h  oifilter.c  oifilter.h  oifitslib.pc  oifitslib.pc.in  oiiter.c  oiiter.h  oimerge.c  oimerge.h  oitable-demo.c  oitable.pc  oitable.pc.in  read_fits.c  write_fits.c
src/oifitslib/test/: CMakeLists.txt  utest_chkmalloc.c  utest_datemjd.c  utest_oicheck.c  utest_oifile.c  utest_oifilter.c  utest_oiiter.c  utest_oimerge.c
src/python-oifits/: CMakeLists.txt  oicheck.i  oifilter.i  oifits.i  oimerge.i
src/util/: CMakeLists.txt  oifits-check.c  oifits-filter.c  oifits-merge.c  oifits-upgrade.c
test/OIFITS1/: Bin_Ary--MIRC_H.fits  bad_missing_target.fits  bad_neg_error.fits  bad_wave_reversed.fits
test/OIFITS2/: Alp_Vic--MIRC_H.fits  Alp_Vic--MIRC_K.fits  Bin_Ary--MIRC_H.fits  Mystery--AMBER--LowH.fits  alp_aur--COAST_NICMOS.fits  bad_big_t3amp.fits  bad_dup_target.fits  bad_fovtype.fits  bad_missing_array.fits  bad_missing_arrname.fits  bad_missing_corr.fits  bad_missing_element.fits  bad_missing_target.fits  bad_missing_visrefmap.fits  bad_neg_error.fits  bad_spectrum.fits  bad_wave_reversed.fits  bigtest2.fits
testdata/: testdata.fits  testdata.txt  testdata2.fits  testdata2.txt  testdata_opt.fits  testdata_opt.txt
testdata/OIFITS1/: Mystery--AMBER--LowH.fits  bad_big_t3amp.fits  bad_content_kw.fits  bad_dup_target.fits  bad_missing_element.fits  long_target.fits
testdata/OIFITS2/: Alp_Vic--MIRC_H.fits  Alp_Vic--MIRC_K.fits  Bin_Ary--MIRC_H.fits  Mystery--AMBER--LowH.fits  alp_aur--COAST_NICMOS.fits  bad_big_t3amp.fits  bad_checksum.fits  bad_dup_target.fits  bad_flux.fits  bad_fovtype.fits  bad_missing_array.fits  bad_missing_arrname.fits  bad_missing_content_kw.fits  bad_missing_corr.fits  bad_missing_element.fits  bad_missing_target.fits  bad_missing_visrefmap.fits  bad_neg_error.fits  bad_spectrum.fits  bad_wave_reversed.fits  bigtest2.fits
